--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 fakestore.api.url=https://fakestoreapi.com/products
-spring.jpa.hibernate.ddl-auto=update
+
+##Connection to mysql
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://localhost:3306/productservice
 spring.datasource.username=root
 spring.datasource.password=root
