added new branch

--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 fakestore.api.url=https://fakestoreapi.com/products
 
-##Connection to mysql
+###Connection to mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/userservice?useSSL=false
 spring.datasource.username=root
