added basic code for authentication token in productService

--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.show-sql: true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operationsSorter=method
+
+##set port no
+server.port=9090
