--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.show-sql: true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operationsSorter=method
-
+springdoc.swagger-ui.tagsSorter=alpha
 spring.flyway.baseline-on-migrate=true
