--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -7,9 +7,27 @@ spring.datasource.url=jdbc:mysql://localhost:3306/userservice?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.show-sql= true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 spring.flyway.baseline-on-migrate=true
+
+server.port=9000
+
+logging.level.org.springframework.security=trace
+
+spring.security.user.name=user
+spring.security.user.password=password
+
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.client-id=client1
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.client-secret=secret
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.client-authentication-methods[0]=client_secret_basic
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.authorization-grant-types[0]=authorization_code
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.authorization-grant-types[1]=refresh_token
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.redirect-uris[0]=http://127.0.0.1:8080/login/oauth2/code/oidc-client
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.post-logout-redirect-uris[0]=http://127.0.0.1:8080/
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.scopes[0]=openid
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.scopes[1]=profile
+#spring.security.oauth2.authorizationserver.client.oidc-client.require-authorization-consent=true
