--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.flyway.baseline-on-migrate=true
 
 server.port=9000
 
-logging.level.org.springframework.security=trace
+logging.level.org.springframework.security=DEBUG
 
 spring.security.user.name=user
 spring.security.user.password=password
