--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 fakestore.api.url=https://fakestoreapi.com/products
 ##Connection to mysql
-spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mysql://localhost:3306/productservice
-spring.datasource.username=root
-spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${USER_SERVICE_DB_URL}
+spring.datasource.username=${USER_SERVICE_DB_USERNAME}
+spring.datasource.password=${USER_SERVICE_DB_PASSWORD   }
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql:true
 springdoc.api-docs.path=/api-docs
