--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -3,7 +3,7 @@ fakestore.api.url=https://fakestoreapi.com/products
 
 ###Connection to mysql
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/userservice?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/userservice?allowPublicKeyRetrieval=true&&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
