added service discovery

--- a/ServiceDiscovery/src/main/resources/application.properties
+++ b/ServiceDiscovery/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ServiceDiscovery
+spring.application.name=servicediscovery
 server.port=8761
 
 eureka.client.register-with-eureka=false
