--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -31,3 +31,13 @@ spring.security.user.password=password
 #spring.security.oauth2.authorizationserver.client.oidc-client.registration.scopes[0]=openid
 #spring.security.oauth2.authorizationserver.client.oidc-client.registration.scopes[1]=profile
 #spring.security.oauth2.authorizationserver.client.oidc-client.require-authorization-consent=true
+
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.healthcheck.enabled=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+spring.application.name=userservice
+
+management.security.enabled=false
+
