--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -1,13 +1,25 @@
 fakestore.api.url=https://fakestoreapi.com/products
 ##Connection to mysql
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${USER_SERVICE_DB_URL}
-spring.datasource.username=${USER_SERVICE_DB_USERNAME}
-spring.datasource.password=${USER_SERVICE_DB_PASSWORD   }
+#spring.datasource.url=${USER_SERVICE_DB_URL}
+#spring.datasource.username=${USER_SERVICE_DB_USERNAME}
+#spring.datasource.password=${USER_SERVICE_DB_PASSWORD   }
+spring.datasource.name=productservice
+spring.datasource.url=jdbc:mysql://localhost:3306/productservice
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql:true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operationsSorter=method
 ##set port no
-server.port=9090
+server.port=${SERVER_PORT}
+
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.healthcheck.enabled=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+spring.application.name=productservice
+management.security.enabled=false
