--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -14,7 +14,7 @@ springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 spring.flyway.baseline-on-migrate=true
 
-server.port=9000
+server.port=${SERVER_PORT}
 
 logging.level.org.springframework.security=DEBUG
 
