--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -13,3 +13,5 @@ springdoc.swagger-ui.operationsSorter=method
 
 ##set port no
 server.port=9090
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
