--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -15,6 +15,7 @@ springdoc.swagger-ui.tagsSorter=alpha
 spring.flyway.baseline-on-migrate=true
 
 server.port=9000
+spring.security.oauth2.authorizationserver.issuer=http://localhost:9000
 
 logging.level.org.springframework.security=DEBUG
 
